Added embed tag to document and created zip file
Added embed tag to web page and  created zip file to  send for review.

--- a/Web_Page/index.html
+++ b/Web_Page/index.html
@@ -26,49 +26,47 @@
 
 <b>HTML(Hyper Text Markup Language)</b>
 
-A markup language that it is made up of tags that determines the behavour of content.
+<p>A markup language that it is made up of tags that determines the behavour of content.</p>
+
 
 
 also refered to as elements. A tag is formatting in two ways the first and most common is tag contains an opening and closting tag <tag> contents </tag>
 
 
-There are 2 types of elements in HTML Inline and Block
+<p>There are 2 types of elements in HTML Inline and Block</p>
 Inline affects the contents directly
-<br>, <em>, <br>, <img>
+<pre><br>, <em>, <br>, <img></pre>
 Block affects the area around the contents
-<p>, <div>,
-
-
+<pre><p>, <div>,</pre>
 
 HTML Tag
-<tag> contents </tag>
+<pre><tag> contents </tag></pre>
 
 HTML tag with Attributes 
-<tag ATTR="value"> contents </tag>
+<pre><tag ATTR="value"> contents </tag></pre>
 
 Null HTML Tag: No closing tag needed for the HTML element.
-<tag> (no closing tag)
+<pre><tag></pre> (no closing tag)
 
 Null HTML Tag with Atrributes
-<tag ATTR=""> (no closing tag)
+<pre><tag ATTR=""></pre> (no closing tag)
 
-Anchor tag <a href="www.udacity.com"> Udacity</a>
-Image Tag
-void tag :<tag ATTR="link" ATTR="text">
-<img src="url" alt "text">
+Anchor tag: <pre><a href="www.udacity.com"> Udacity</a></pre>
+Image Tag: <pre><img src="url" alt "text"></pre>
+void tag : <pre><tag ATTR="link" ATTR="text"></pre>
 
-CSS container tags
 
-These tags create the stylised structure of the document allowing content to be compartmentalized 
+<b>CSS container tags</b>
+
+<p>These tags create the stylised structure of the document allowing content to be compartmentalized</p> 
 
 Span (inline)
-<span class="class name"> text </span>
+<pre><span class="class name"> text </span></pre>
 
 Div (Block)
-<dive class="class name"> text </div
+<pre><dive class="class name"> text </div></pre>
 
-<br> Break if you want text to appear on mutiple lines
-
+<pre><br> Break if you want text to appear on mutiple lines</pre>
 
 <em>
 Emphisis
